@@ -1,21 +1,35 @@
 package com.lotteon.service.product;
 
+/*
+    날짜 : 2024.10.20
+    이름 : 하진희
+    내용 : product Insert
+
+   ==========================
+   추가작업
+   2024.10.23 하진희 - product list service 추가
+   2024.10.26 하진희 - product insert부분 수정 ( image sname 넣기)
+ */
+
+
+import com.lotteon.dto.User.SellerDTO;
 import com.lotteon.dto.product.*;
+import com.lotteon.entity.User.Seller;
 import com.lotteon.entity.product.Option;
 import com.lotteon.entity.product.Product;
 import com.lotteon.entity.product.ProductDetails;
 import com.lotteon.entity.product.ProductFile;
 import com.lotteon.repository.product.OptionRepository;
 import com.lotteon.repository.product.ProductRepository;
+import com.lotteon.repository.user.SellerRepository;
 import com.lotteon.service.FileService;
+import com.lotteon.service.user.SellerService;
 import com.querydsl.core.Tuple;
-import com.querydsl.core.types.Expression;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
 import org.modelmapper.ModelMapper;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
-import org.springframework.security.core.Authentication;
 import org.springframework.stereotype.Service;
 
 import java.util.*;
@@ -32,18 +46,28 @@ public class ProductService {
     private final ModelMapper modelMapper;
     private final FileService fileService;
     private final ProductFileService productFileService;
+    private final SellerRepository sellerRepository;
+    private final SellerService sellerService;
 
     public Long insertProduct(ProductResponseDTO insertProduct) {
 
         ProductDTO productDTO = insertProduct.getProduct();
         //product insert
+
+
+
+       Optional<Seller> opt = sellerRepository.findByUserUid(productDTO.getSellerId());
+        log.info("seller opt /////////"+opt);
+        long sellerNo=0;
+        if(opt.isPresent()) {
+            Seller seller = opt.get();
+            log.info("seller seller /////////"+seller);
+
+            sellerNo = seller.getId();
+        }
+        productDTO.setSellerNo(sellerNo);
+
         Product product= modelMapper.map(productDTO, Product.class);
-
-        log.info("Before setting sellerId: " + product.getSellerId());
-
-        product.setSellerId(productDTO.getSellerId());
-        log.info("After setting sellerId: " + product.getSellerId());
-
 
         //file upload & insert
         List<ProductFileDTO> fileDTOS=  fileService.uploadFile(insertProduct.getImages());
@@ -53,20 +77,23 @@ public class ProductService {
             ProductFile file = productFileService.insertFile(productFileDTO);
             files.add(file);
         }
+        log.info("filessssssssssssssssss:"+files);
         product.setFiles(files);
 
         //option 저장로직
-        Set<OptionDTO> options = insertProduct.getOptions();
+        List<OptionDTO> options = insertProduct.getOptions();
 
 
         //option insert
-        Set<Option> optionSet =  options.stream().map((element) -> modelMapper.map(element, Option.class)).collect(Collectors.toSet());
-        for(Option option : optionSet) {
+        List<Option> savedOptions = new ArrayList<Option>();
+        for(OptionDTO option : options) {
             log.info("option : "+ option);
-            optionRepository.save(option);
+            Option toEntity = modelMapper.map(option, Option.class);
+           Option savedOption =  optionRepository.save(toEntity);
+           savedOptions.add(savedOption);
         }
 
-        product.setOptions(optionSet);
+        product.setOptions(savedOptions);
 
         ProductDetailsDTO details = insertProduct.getProductDetails();
         ProductDetails productDetails = modelMapper.map(details, ProductDetails.class);
@@ -77,12 +104,23 @@ public class ProductService {
     }
 
     //사용자별 productlist
-    public  List<ProductDTO> selectProductBySellerId(String sellerId) {
-        List<Product> products = productRepository.findBySellerId(sellerId);
+    public ProductListPageResponseDTO selectProductBySellerId(String sellerId,PageRequestDTO pageRequestDTO) {
+        Pageable pageable = pageRequestDTO.getPageable("sold",10);
+        Page<Product> products = productRepository.findBySellerId(sellerId,pageable);
         if(products.isEmpty()) {
-            return null;
+            return ProductListPageResponseDTO.builder()
+                    .productDTOs(Collections.emptyList())
+                    .pageRequestDTO(pageRequestDTO)
+                    .total(0)
+                    .build();
         }
-        return products.stream().map(product -> modelMapper.map(product, ProductDTO.class)).toList();
+       List<ProductDTO> productDTOs =  products.stream().map(product -> modelMapper.map(product, ProductDTO.class)).collect(Collectors.toList());
+
+        return ProductListPageResponseDTO.builder()
+                .total(productDTOs.size())
+                .productDTOs(productDTOs)
+                .pageRequestDTO(pageRequestDTO)
+                .build();
     }
 
     public void selectProduct() {}
@@ -93,42 +131,7 @@ public class ProductService {
     }
 
 
-    //seller list
-    public  ProductListPageResponseDTO selectProductsBySellerId(String sellerId,PageRequestDTO pageRequestDTO) {
-        Pageable pageable = pageRequestDTO.getPageable("hit",10);
 
-
-        List<ProductListDTO> productListDTOs = null;
-        int total=0;
-
-        Page<ProductListDTO> tuples = productRepository.selectProductBySellerIdForList(sellerId,pageRequestDTO,pageable);
-        if(!tuples.isEmpty()) {
-            if(pageRequestDTO.getType() ==null){
-                productListDTOs = tuples.getContent();
-                for(ProductListDTO productListDTO : productListDTOs) {
-                    ProductFileDTO file = productListDTO.getProductFiles().get(0);
-                    productListDTO.setFile190(file.getSName());
-                }
-
-                total= (int) tuples.getTotalElements();
-                List<ProductFileDTO> files = new ArrayList<>();
-
-            }
-        }else{
-            productListDTOs = Collections.emptyList();
-            total=0;
-        }
-
-
-
-        return ProductListPageResponseDTO.builder()
-                .pageRequestDTO(pageRequestDTO)
-                .productDTOList(productListDTOs)
-                .total(total)
-                .build();
-
-
-    }
     public void updateProduct() {}
     public int deleteProduct(Long ProductID) {
         int result=0;
@@ -143,82 +146,69 @@ public class ProductService {
 
 
     //main list
-    public ProductListPageResponseDTO selectProductListByCategory(PageRequestDTO pageRequestDTO){
+    public ProductListPageResponseDTO getProductList(PageRequestDTO pageRequestDTO) {
         Pageable pageable = pageRequestDTO.getPageable("hit",10);
 
+        Page<Tuple> tuples = productRepository.selectProductByCategory(pageRequestDTO,pageable);
+        log.info("disldksldkfsd: "+tuples.getContent().toString());
 
-        Page<Tuple> tuple =null;
-        int total = 0;
-        if(pageRequestDTO.getType() ==null){
-            tuple = productRepository.selectProductForList(pageRequestDTO,pageable);
-            log.info("여기 Product!!!!!!!!!"+tuple.getContent());
-            total = (int) tuple.getTotalElements();
-
+        if(tuples.isEmpty()) {
+            return ProductListPageResponseDTO.builder()
+                    .productDTOs(Collections.emptyList())
+                    .pageRequestDTO(pageRequestDTO)
+                    .total(0)
+                    .build();
         }
 
+        List<ProductDTO> productDTOs = tuples.stream().map(tuple -> {
+            Product product = tuple.get(0,Product.class);  // qProduct 엔티티 객체를 가져옴
+            Seller seller = tuple.get(1,Seller.class);    // qSeller 엔티티 객체를 가져옴
 
-        log.info("total : "+total);
-        List<ProductListDTO> productDTOList = tuple.stream().map(t->{
-            // Tuple에서 Product와 ProductFile 추출
-            Product product = t.get(0, Product.class);  // 첫 번째로 조회된 Product
+            // `ProductDTO`와 `SellerDTO`로 매핑
+            ProductDTO productDTO = modelMapper.map(product, ProductDTO.class);
+            SellerDTO sellerDTO = modelMapper.map(seller, SellerDTO.class);
 
-            // Product를 DTO로 변환
-            ProductListDTO productDTO = modelMapper.map(product, ProductListDTO.class);
+            // `ProductDTO`에 `SellerDTO`를 설정 (ProductDTO가 SellerDTO 필드를 가정)
+            productDTO.setCompany(sellerDTO.getCompany());
 
-            log.info("productDTO : "+ productDTO);
-            // 추가로 ProductFile 관련 정보를 ProductDTO에 저장하려면 여기에 작성
-            List<ProductFile> productFiles = product.getFiles();
-            List<ProductFileDTO> productFileDTOS = productFiles.stream().map((element) -> modelMapper.map(element, ProductFileDTO.class)).collect(Collectors.toList());
-
-            log.info("productFiles : "+productFileDTOS);
-
-            productDTO.setProductFiles(productFileDTOS);
             return productDTO;
-
         }).collect(Collectors.toList());
 
-        log.info("productDTOLists : "+productDTOList);
         return ProductListPageResponseDTO.builder()
+                .total((int) tuples.getTotalElements())
+                .productDTOs(productDTOs)
                 .pageRequestDTO(pageRequestDTO)
-                .productDTOList(productDTOList)
-                .total(total)
                 .build();
-
     }
 
 //////////////////////////////////////////////////////////
-    public ProductListPageResponseDTO selectProductListBymarket(PageRequestDTO pageRequestDTO){
-        List<ProductListDTO> productListDTOs = null;
-        int total=0;
-        Pageable pageable = pageRequestDTO.getPageable("hit",10);
-        Page<ProductListDTO> tuples = productRepository.selectProductForListByCategory(pageRequestDTO,pageable);
-        if(!tuples.isEmpty()) {
-            if(pageRequestDTO.getType() ==null){
-                productListDTOs = tuples.getContent();
-                total= (int) tuples.getTotalElements();
-                List<ProductFileDTO> files = new ArrayList<>();
-
-            }
-        }else{
-            productListDTOs = Collections.emptyList();
-            total=0;
-        }
-
-
-
-        return ProductListPageResponseDTO.builder()
-                .pageRequestDTO(pageRequestDTO)
-                .productDTOList(productListDTOs)
-                .total(total)
-                .build();
-
-    }
-
+//
     //view page select
     public ProductDTO getProduct(Long ProductID) {
 
         Product product = productRepository.findByProductId(ProductID);
         ProductDTO productDTO = modelMapper.map(product, ProductDTO.class);
+
+        List<OptionDTO> optionDTOs = product.getOptions().stream().map(option -> modelMapper.map(option, OptionDTO.class)).collect(Collectors.toList());
+        List<ProductFileDTO> productFileDTOs = product.getFiles().stream().map(file -> modelMapper.map(file, ProductFileDTO.class)).collect(Collectors.toList());
+        productDTO.setOptions(optionDTOs);
+        productDTO.setProductFiles(productFileDTOs);
+        List<String> filedesc= new ArrayList<>();
+        if(!productFileDTOs.isEmpty()){
+            for(ProductFileDTO productFileDTO : productFileDTOs){
+                if(productFileDTO.getType().equals("940")){
+                    filedesc.add(productFileDTO.getSName());
+                }
+            }
+        }
+        productDTO.setFiledesc(filedesc);
+
+
+        SellerDTO sellerDTO = sellerService.getSeller(product.getSellerId());
+        productDTO.setSeller(sellerDTO);
+
+        log.info("view!!!!!!!!!!!!!!!!!!1; "+productDTO);
+
 
         return productDTO;
     }
